--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "sheets.js",
   "scripts": {
-    "jscs": "node_modules/.bin/jscs *.js"
+    "deploy": "npm test && ./node_modules/.bin/sls deploy",
+    "test": "npm run testJscs && npm run testMocha",
+    "testJscs": "./node_modules/.bin/jscs **/*.js",
+    "testMocha": "./node_modules/.bin/mocha --recursive test/spec",
+    "testWatch": "./node_modules/.bin/mocha --recursive --watch test/spec"
   },
   "repository": {
     "type": "git",
@@ -17,11 +21,26 @@
   },
   "homepage": "https://github.com/coreyferguson/tweetsheets-api#readme",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "csv-stringify": "^1.0.4",
-    "serverless-dynamodb-local": "^0.2.21",
+    "js-yaml": "^3.9.0",
+    "qs": "^6.5.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "jscs": "^3.0.7"
+    "chai": "^4.0.2",
+    "chai-as-promised": "^7.1.0",
+    "chai-string": "^1.4.0",
+    "express": "^4.15.3",
+    "jscs": "^3.0.7",
+    "local-dynamo": "^0.5.0",
+    "mocha": "^3.4.2",
+    "phantom": "^4.0.4",
+    "serverless": "^1.16.1",
+    "serverless-crypt": "0.0.3",
+    "sinon": "^2.3.6",
+    "sinon-chai": "^2.11.0"
   }
 }
