--- a/config/environment-config.yml
+++ b/config/environment-config.yml
@@ -7,7 +7,7 @@ preprod:
       - https://local.tweetsheets-dev.overattribution.com:3000
     batch:
       size: 10
-      throttleDelayInSeconds: 60
+      throttleDelayInSeconds: 300 # 5 minutes
 
 test:
   express:
