--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "sheets.js",
   "scripts": {
     "deploy": "npm test && ./node_modules/.bin/sls deploy",
-    "test": "npm run testJscs && npm run testMocha",
-    "testJscs": "./node_modules/.bin/jscs **/*.js",
+    "eslint": "./node_modules/.bin/eslint .",
+    "test": "npm run eslint && npm run testMocha",
     "testMocha": "stage=test ./node_modules/.bin/mocha --recursive test/spec",
     "testWatch": "stage=test ./node_modules/.bin/mocha --recursive --watch test/spec"
   },
@@ -33,8 +33,8 @@
     "chai": "^4.0.2",
     "chai-as-promised": "^7.1.0",
     "chai-string": "^1.4.0",
+    "eslint": "^4.11.0",
     "express": "^4.15.3",
-    "jscs": "^3.0.7",
     "local-dynamo": "^0.5.0",
     "mocha": "^3.4.2",
     "phantom": "^4.0.4",
